<resources>
    <string name="app_name">Corona Virus(Covid-19)</string>
    <string name="SymptomsHeading">The COVID-19 virus affects different people in different ways.  COVID-19 is a respiratory disease and most infected people will develop mild to moderate symptoms and recover without requiring special treatment.  People who have underlying medical conditions and those over 60 years old have a higher risk of developing severe disease and death.</string>
    <string name="commonSymptoms">Common symptoms include:\n\n
                                  fever\n\n
                                  tiredness\n\n
                                  dry cough.</string>
    <string name="otherCommonSymptoms">Other symptoms include:\n

shortness of breath\n\n
aches and pains\n\n
sore throat\n\n
and very few people will report diarrhoea, nausea or a runny nose.\n\n
    People with mild symptoms who are otherwise healthy should self-isolate and contact their medical provider or a COVID-19 information line for advice on testing and referral.\n
    \n\n
    People with fever, cough or difficulty breathing should call their doctor and seek medical attention.\n\n</string>

    <string name="preventions">To prevent infection and to slow transmission of COVID-19, do the following:\n\n

Wash your hands regularly with soap and water, or clean them with alcohol-based hand rub.\n\n
Maintain at least 1 metre distance between you and people coughing or sneezing.\n\n
Avoid touching your face.\n\n
Cover your mouth and nose when coughing or sneezing.\n\n
Stay home if you feel unwell.\n\n
Refrain from smoking and other activities that weaken the lungs.\n\n
Practice physical distancing by avoiding unnecessary travel and staying away from large groups of people.\n\n</string>


    <string name="what_is_corona_virus">Coronaviruses are a group of viruses that can cause disease in both animals and humans. The severe acute respiratory syndrome (SARS) virus strain known as SARS-CoV is an example of a coronavirus. SARS spread rapidly in 2002–2003.\n\n

The new strain of coronavirus is called severe acute respiratory syndrome coronavirus 2 (SARS-CoV-2). The virus causes coronavirus disease 19 (COVID-19).\n\n
 Around 80% of people with COVID-19 recover without specialist treatment. These people may experience mild, flu-like symptoms. However, 1 in 6 people may experience severe symptoms, such as trouble breathing.\n\n
 The new coronavirus has spread rapidly in many parts of the world. On March 11, 2020, the World Health Organization (WHO) declared COVID-19 a pandemic. A pandemic occurs when a disease that people are not immune to spreads across large regions.

Read on to learn more about the suspected cause of coronavirus and how it spreads.</string>

    <string name="causes_corona">The recent outbreak began in Wuhan, a city in the Hubei province of China. Reports of the first COVID-19 cases started in December 2019.\n\n

Coronaviruses are common in certain species of animals, such as cattle and camels. Although the transmission of coronaviruses from animals to humans is rare, this new strain likely came from bats, though one study suggests pangolins may be the origin.\n\n

However, it remains unclear exactly how the virus first spread to humans.\n\n

Some reports trace the earliest cases back to a seafood and animal market in Wuhan. It may have been from here that SARS-CoV-2 started to spread to humans.</string>

    <string name="spread_corona">SARS-CoV-2 spreads from person to person through close communities.\n\n

When people with COVID-19 breathe out or cough, they expel tiny droplets that contain the virus. These droplets can enter the mouth or nose of someone without the virus, causing an infection to occur.\n\n

The most common way that this illness spreads is through close contact with someone who has the infection. Close contact is within around 6 feet.\n\n

The disease is most contagious when a person’s symptoms are at their peak. However it is possible for someone without symptoms to spread the virus. A new study suggests that 10% of infections are from people exhibiting no symptoms.\n\n

Droplets containing the virus can also land on nearby surfaces or objects. Other people can pick up the virus by touching these surfaces or objects. Infection is likely if the person then touches their nose, eyes, or mouth.\n\n

It is important to note that COVID-19 is new, and research is still ongoing. There may also be other ways that the new coronavirus can spread.\n\n

</string>

    <string name="comparison">Most cases of COVID-19 are not serious. However, it can cause symptoms that become severe, leading to death in some cases.\n\n

The outbreak of COVID-19 has been sudden. This makes it difficult to estimate how often the disease becomes severe or the exact rate of mortality.\n\n

One report suggests that out of 1,099 people with confirmed cases in China, around 16% became severe. Another report estimates that about 3.6% of the confirmed cases in China led to death.\n\n

These figures are likely to change as the situation evolves. However, they suggest that COVID-19 is more deadly than influenza. For example, seasonal influenza typically leads to death in less than 0.1% of cases.\n\n

When testing becomes easier and more widespread, health experts will have a more accurate insight into the exact number of severe cases and deaths.\n\n

SARS is another type of coronavirus. It became a global pandemic in 2002–2003. Around 9.6% of SARS cases led to death. However, COVID-19 is more contagious, and it is already the cause of more deaths worldwide.</string>
</resources>
